# schemas

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  setup.py  sonar-project.properties
.github/workflows/: debian.yml  pypi.yml  rust.yml
edgefirst/schemas/: CameraInfo.py  CompressedImage.py  CompressedVideo.py  Detect.py  ImageAnnotation.py  __init__.py  buildin_interfaces.py  builtin_interfaces.py  edgefirst_msgs.py  foxglove_msgs.py  geometry_msgs.py  nav_msgs.py  sensor_msgs.py  std_msgs.py
edgefirst/schemas/builtin_interfaces/: Duration.py  Time.py  __init__.py
edgefirst/schemas/edgefirst_msgs/: Box.py  Date.py  Detect.py  DmaBuffer.py  LocalTime.py  RadarCube.py  Track.py  __init__.py
edgefirst/schemas/foxglove_msgs/: ArrowMarker.py  ArrowPrimitive.py  CameraCalibration.py  CircleAnnotation.py  Color.py  CompressedImage.py  CompressedVideo.py  ConeAttributes.py  ConeListMarker.py  ConeMarker.py  ConePrimitive.py  CubeAttributes.py  CubeListMarker.py  CubeMarker.py  CubePrimitive.py  CylinderMarker.py  GeoJSON.py  (+42 more)
edgefirst_msgs/: .gitignore  CMakeLists.txt  package.xml
edgefirst_msgs/debian/: .gitignore  changelog  control  copyright  rules
edgefirst_msgs/msg/: Date.msg  LocalTime.msg  Mask.msg  Model.msg  ModelInfo.msg  RadarInfo.msg  Track.msg
src/: builtin_interfaces.rs  edgefirst_msgs.rs  foxglove_msgs.rs  geometry_msgs.rs  lib.rs  rosgraph_msgs.rs  sensor_msgs.rs  service.rs  std_msgs.rs
src/common_interfaces/: geometry_msgs.rs  mod.rs  sensor_msgs.rs  std_msgs.rs
src/rcl_interfaces/: builtin_interfaces.rs  mod.rs  rosgraph_msgs.rs
(+99 files in other folders)
